Added support to update lib on device
When esp is connected over ble or usb cable, we need a mechanism to update the libraries. Added an extra button in Files tab to update a file onto device. This helps in adding new lib files on the fly even if device is not connected to internet

--- a/blockcoding/bipes-ILS/BIPES/ui/style.css
+++ b/blockcoding/bipes-ILS/BIPES/ui/style.css
@@ -654,7 +654,9 @@ pre.content {
 #ProjectList .current span {
   filter: invert(1);
 }
-
+#put-file-select-cloud:before {
+  background-position: left calc(-1.5rem*19) top;
+}
 /* Toolbar */
 @media (min-width: 60em) {
   .top-menu > .toolbar {
