--- a/blockcoding/bipes-ILS/BIPES/ui/style.css
+++ b/blockcoding/bipes-ILS/BIPES/ui/style.css
@@ -722,7 +722,7 @@ pre.content {
 
 
 #extensionButton {
-  background-image: url('/media/exticon.svg');
+  background-image: url('./media/exticon.svg');
   background-position: center;
   background-size: 70% ; /* Increased from 1.5rem to percentage */
   background-repeat: no-repeat;
