--- a/blockcoding/bipes-ILS/BIPES/ui/style.css
+++ b/blockcoding/bipes-ILS/BIPES/ui/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 :root {
     /* Brand Colors from Logo */
     --brand-red: #E63946;
@@ -23,13 +25,13 @@ body {
 
 body {
     background-color: #F8F9FA;  /* Light background instead of #fff */
-    font-family: sans-serif;
+    font-family:Poppins;
     margin: 0;
     overflow: hidden;
     overscroll-behavior: none;
     /*disable pull to refresh */
     /* font-family: BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif; */
-    font-family: 'Red Hat Display', sans-serif !important;
+    font-family: 'Poppins', sans-serif !important;
 }
 
 label {
@@ -137,7 +139,7 @@ h1 {
   display: flex;
   align-items: center;
     color: white;  /* Changed from #3298dc to white for gradient background */
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Poppins,Arial, Helvetica, sans-serif;
 }
 
 
@@ -461,6 +463,7 @@ input.checkswitch[type="checkbox"] {
     text-transform: capitalize;
     font-size: 0.9rem;
     font-weight: 550;
+    text-transform: uppercase;
     vertical-align: middle;
     height: 100%;
     line-height: var(--top-height);
@@ -765,14 +768,14 @@ pre.content {
 #fileList .runText,
 #ProjectList .runText {
     width: 100%;
-    font-family: monospace;
+    font-family: Poppins;
 }
 
 #fileTemplate>div,
 #blocks2Code>div {
     align-items: center;
     word-break: break-word;
-    font-family: monospace;
+    font-family: Poppins;
 }
 
 #fileList>div>div,
@@ -792,7 +795,7 @@ pre.content {
     margin-left: .25rem;
     font-weight: bold;
     word-break: keep-all;
-    font-family: sans-serif;
+    font-family: Poppins;
 }
 
 #fileList #runIcon {
@@ -1085,7 +1088,7 @@ button.icon.medium:before  {
 
 /* Privacy link */
 .privacyLink {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
+  font-family: Poppins,Roboto, Arial, Helvetica, sans-serif;
   font-size: small;
   text-decoration: none;
 }
@@ -1574,3 +1577,32 @@ button.icon.medium:before  {
     opacity: 0.5;
 }
 
+/* Blockly Font Customization */
+.blocklyText {
+    font-family: 'Varela Round', sans-serif !important;
+    font-weight: 500 !important;
+}
+
+/* Block field text (inputs, dropdowns) */
+.blocklyEditableText > text,
+.blocklyNonEditableText > text {
+    font-family: 'Varela Round', sans-serif !important;
+    font-weight: 500 !important;
+}
+
+/* Dropdown menus */
+.blocklyDropDownDiv {
+    font-family: 'Varela Round', sans-serif !important;
+}
+
+/* Toolbox (category names) */
+.blocklyTreeLabel {
+    font-family: 'Varela Round', sans-serif !important;
+    font-weight: 600 !important;
+}
+
+/* Flyout (blocks in toolbox) */
+.blocklyFlyoutLabel {
+    font-family: 'Varela Round', sans-serif !important;
+    font-weight: 600 !important;
+}
